# DuckGame-Recreation

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Documentación ténica.md  Makefile  Manual de proyecto.md  Manual de usuario.md  README.md  install-libsdl2pp.sh  install-opus.sh  install-opusfile.sh  install-sdl-image.sh  install-sdl-mixer.sh  install-sdl-ttf.sh  install-sdl.sh  install_dependencies.sh  install_graphics.sh  installer.sh  pre-install.sh
assets/: PewPewLaser.pxo
assets/background/: placeHolder.txt
assets/debug/: placeHolder.txt
assets/weapons/: placeHolder.txt
client/: CMakeLists.txt  main.cpp
client/comunicator/: ComReceiver.cpp  ComReceiver.h  ComSender.cpp  ComSender.h  ComSync.cpp  ComSync.h  Communicator.cpp  Communicator.h  Comunicator.cpp  Comunicator.h
client/protocol/: ClientMessage.h  ClientRecvProtocol.cpp  ClientRecvProtocol.h  ClientSendProtocol.cpp  ClientSendProtocol.h
client/protocol/message/: ClientMessage.h
client/view/: GameLauncher.cpp  GameLauncher.h  main.cpp
client/view/game/: Camera.cpp  Camera.h  DuckState.h  EnviromentRenderer.cpp  EnviromentRenderer.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  Game.hpp  Player.cpp  Player.h  Renderer.cpp  Renderer.h  SoundManager.cpp  SoundManager.h  SpriteManager.cpp  SpriteManager.h  Spritesheet.cpp  Spritesheet.h  TextureManager.cpp  TextureManager.h  WeaponSpriteManager.cpp  WeaponSpriteManager.h
client/view/game/managers/: HudManager.cpp  HudManager.h  SoundManager.cpp  SoundManager.h  SpriteManager.cpp  SpriteManager.h  Spritesheet.cpp  Spritesheet.h  TextureManager.h  WeaponSpriteManager.cpp  WeaponSpriteManager.h
client/view/menu/: GameInfo.h  LobbyQT.cpp  LobbyQT.h  Menu.cpp  Menu.hpp  MyLobbyMessage.h  common_init.cpp  common_init.h  gameMenu.cpp  gameMenu.h  gamemenu.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
client/view/menu/LobbyQT/: CMakeLists.txt  resource.qrc
client/view/menu/pages/: configurationPage.ui  configurationpage.cpp  configurationpage.h  hostwaitingpage.cpp  hostwaitingpage.h  hostwaitingpage.ui  joinGame.ui  joingame.cpp  joingame.h  joinwaitingpage.cpp  joinwaitingpage.h  joinwaitingpage.ui  mainMenu.ui  mainmenu.cpp  mainmenu.h  matchSetup.cpp  matchSetup.h  matchSetup.ui  matchStarted.ui  matchstarted.cpp  matchstarted.h  newGame.ui  newgame.cpp  newgame.h  waitingPage.cpp  waitingPage.h  waitingPage.ui
cmake/: CompilerWarnings.cmake
common/: CMakeLists.txt  Types.h  foo.cpp
common/debugging/: Debug.cpp  Debug.h
common/enums/: Background.cpp  Background.h  Force.h
common/exceptions/: ClosedSocket.cpp  ClosedSocket.h  LibError.cpp  LibError.h
common/game/: DuckData.cpp  DuckData.h  EquippedGunData.cpp  EquippedGunData.h  GameObject2DData.cpp  GameObject2DData.h  GameObjectData.cpp  GameObjectData.h  GameStatus.cpp  GameStatus.h  GameStatus.hpp  GunData.cpp  GunData.h  GunID.cpp  GunID.h  ItemData.cpp  ItemData.h  ItemID.cpp  ItemID.h  Object2DData.cpp  Object2DData.h  ObjectData.cpp  ObjectData.h  SizedObjectData.cpp  SizedObjectData.h
common/math/: Capsule.cpp  Capsule.h  Circle.cpp  Circle.h  IntersectionInfo.cpp  IntersectionInfo.h  Line.cpp  Line.h  Math.cpp  Math.h  Math.hpp  Matrix2.cpp  Matrix2.h  Ray2D.cpp  Ray2D.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h  Segment2D.cpp  Segment2D.h  Shape2D.cpp  Shape2D.h  Vector2.cpp  Vector2.h
common/messages/: ClientMessage.h  GameMessage.cpp  GameMessage.h  LobbyMessage.cpp  LobbyMessage.h  Message.h  MessageType.cpp  MessageType.h  ReplyMessage.cpp  ReplyMessage.h  ServerMessage.h
common/protocol/: ClientRecvProtocol.cpp  ClientRecvProtocol.h  ClientSendProtocol.cpp  ClientSendProtocol.h  Protocol.cpp  Protocol.hpp  ReceiveProtocol.cpp  ReceiveProtocol.h  SendProtocol.cpp  SendProtocol.h  ServerRecvProtocol.cpp  ServerRecvProtocol.h  ServerSendProtocol.cpp  ServerSendProtocol.h
common/random/: RandomGenerator.h  RandomGeneratr.cpp
common/resources/: Resource.cpp  Resource.h
common/socket/: ActiveSocket.cpp  ActiveSocket.h  ListenerSocket.cpp  ListenerSocket.h  ReceiverSocket.h  Resolver.cpp  Resolver.h  ResolverError.cpp  ResolverError.h  SenderSocket.h  Socket.cpp  Socket.h
common/synchronized/: BlockingQueue.h  GameMapMonitor.h  ThreadSafeHashMap.h  ThreadSafeVector.h
common/thread/: Runnable.h  Thread.cpp  Thread.h
common/time/: Timer.cpp  Timer.h
common/utils/: ByteUtils.cpp  ByteUtils.h  StringUtils.cpp  StringUtils.h
common/wrappers/: Method.h
config/: DuckSprite.yaml  armor.yaml  duck.yaml  match.yaml  physics.yaml  weapons.yaml
config/weapons/: ak_47.yaml  banana.yaml  cowboy_pistol.yaml  duel_pistol.yaml  grenade.yaml  laser_rifle.yaml  magnum.yaml  pew_pew_laser.yaml  shotgun.yaml  sniper.yaml
documentation/: Documentación Técnica.md  Manual de usuario.md
editor/: CMakeLists.txt  EditorConstants.h  LevelScene.cpp  LevelScene.h  MapData.h  MapExporter.cpp  MapExporter.h  MapManager.cpp  MapManager.h  Object.cpp  Object.h  ObjectConstants.h  ViewController.cpp  ViewController.h  levelscene.cpp  levelscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  viewcontroller.ui
editor/LevelEditor/: levelscene.cpp  levelscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
editor/controller/: Controller.cpp  Controller.hpp
editor/model/: Model.cpp  Model.hpp
editor/view/: View.hpp
maps/: .yaml  ANDA.yaml  ANDA?.yaml  CAMARA.yaml  DesertMap.yaml  MapaConArmas.yaml  TestLevel.yaml  TheForest.yaml  Volcano.yaml  duck.yaml  mapTamaño2.yaml  mapa.yaml  mapa1.yaml  mapa2.yaml  mapa4.yaml  mapaConCajasYSpawns.yaml  mapaDemo.yaml  mapaGrande.yaml  mapaJugable.yaml  mapita  pruebaTamaño1.yaml  xd.yaml
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
server/client/: LobbyResolver.cpp  LobbyResolver.h  VClient.cpp  (+1 more)
tests/: CMakeLists.txt  ClientMessage.h  ClientRecvProtocol.cpp  ClientRecvProtocol.h  MessageType.h  ReceiveProtocol.h  SendProtocol.cpp  SendProtocol.h  ServerRecvProtocol copy.cpp  ServerSendProtocol.cpp  ServerSendProtocol.h  foo.cpp  test.cpp
(+180 files in other folders)
